cf_analysis_results/checkerframework_3.42.0_results/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8.txt
../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/DatabaseClient.java:38: error: (required.method.not.called) $$ 4 $$ method close $$ DriverManager.getConnection(DB_URL, USER, PASS) $$ java.sql.Connection $$ possible exceptional exit due to con.createStatement() with exception type java.sql.SQLException $$ ( 1093, 1140 ) $$ @MustCall method close may not have been invoked on DriverManager.getConnection(DB_URL, USER, PASS) or any of its aliases.
            con = DriverManager.getConnection(DB_URL, USER, PASS);
                                             ^
  The type of object is: java.sql.Connection.
  Reason for going out of scope: possible exceptional exit due to con.createStatement() with exception type java.sql.SQLException
../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/Common.java:15: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ possible exceptional exit due to is.available() with exception type java.io.IOException $$ ( 395, 443 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
        InputStream is = new FileInputStream(inputfile);
                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to is.available() with exception type java.io.IOException
../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/Common.java:27: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.OutputStream $$ possible exceptional exit due to os.write(b) with exception type java.io.IOException $$ ( 728, 779 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
        OutputStream os = new FileOutputStream(outputfile);
                     ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: possible exceptional exit due to os.write(b) with exception type java.io.IOException
../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/Common.java:35: error: (required.method.not.called) $$ 4 $$ method close $$ os $$ java.io.OutputStream $$ possible exceptional exit due to os.write(aesBuf) with exception type java.io.IOException $$ ( 968, 1016 ) $$ @MustCall method close may not have been invoked on os or any of its aliases.
        OutputStream os = new FileOutputStream(encfile);
                     ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: possible exceptional exit due to os.write(aesBuf) with exception type java.io.IOException
../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/Common.java:82: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ possible exceptional exit due to is.read() with exception type java.io.IOException $$ ( 2157, 2203 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
        InputStream is = new FileInputStream(encfile);
                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to is.read() with exception type java.io.IOException
../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/CryptoUtil.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ fis $$ java.io.FileInputStream $$ possible exceptional exit due to fis.read(dataBytes) with exception type java.io.FileNotFoundException $$ ( 464, 516 ) $$ @MustCall method close may not have been invoked on fis or any of its aliases.
            FileInputStream fis = new FileInputStream(filename);
                            ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to fis.read(dataBytes) with exception type java.io.FileNotFoundException
Note: ../dataset/june2020_dataset/urlc58f2e0b85_xoriole_CEAC_tgz-pJ8-com_sdm_phr_cpabe_CpabeTestJ8/src/com/sdm/phr/cpabe/CpabeTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
